Added code for backend and some changes to Seed as well

--- a/twitter-bot/.gitignore
+++ b/twitter-bot/.gitignore
@@ -5,4 +5,11 @@
 */datasets
 things-to-discuss.md
 auth.js
-*/auth.js
+**/auth.js
+**/auth.py
+*.csv
+*.h5
+*.pickle
+grasp.py
+*/obsolete_classifiers
+*.job
