--- a/gdpr/requirements.txt
+++ b/gdpr/requirements.txt
@@ -1,16 +1,22 @@
+annoy==1.12.0
 cymem==1.31.2
 cytoolz==0.8.2
 dill==0.2.7.1
 Django==1.11.13
+djangorestframework==3.8.2
 en-core-web-sm==2.0.0
+fasteners==0.14.1
+lz4==2.0.0
+monotonic==1.5
 msgpack-numpy==0.4.1
 msgpack-python==0.5.6
 murmurhash==0.28.0
 nltk==3.3
-numpy==1.14.3
+numpy==1.14.5
 pathlib==1.0.1
 plac==0.9.6
 preshed==1.0.0
+pymagnitude==0.1.46
 pytz==2018.4
 regex==2017.4.5
 six==1.11.0
@@ -21,3 +27,4 @@ toolz==0.9.0
 tqdm==4.23.3
 ujson==1.35
 wrapt==1.10.11
+xxhash==1.0.1
