Finished Python-Backend, Datasets, Microservices
Finalized the whole microservices thing with bot calling flask app with topic and anger analysers which load models previously trained on finalized datasets

--- a/twitter-bot/node-frontend/package.json
+++ b/twitter-bot/node-frontend/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "request": "^2.87.0",
+    "seedtext": "^1.2.2",
     "twit": "^2.2.10",
     "twitter": "^1.7.1"
   }
